Set 35mm mic jack as active input device whenever it is hotplugged.

Bug: 776549
Change-Id: If46e0636001c1d8b03a09d69aff7777248e549b0